Use ESC in text file instead of \x1b

--- a/linux_console.yml
+++ b/linux_console.yml
@@ -1,53 +1,53 @@
 escape_sequences:
-  '\x1b7': 'sc'
-  '\x1b8': 'rc'
+  'ESC7': 'sc'
+  'ESC8': 'rc'
 
   # rs1 consists of \x1bc\x1b]R. The second part is ignored so far.
-  '\x1bc': 'rs1'
-  '\x1bH': 'ignore'
-  '\x1b[@': 'ich1'
-  '\x1b[4h': 'smir'
-  '\x1b[4l': 'rmir'
+  'ESCc': 'rs1'
+  'ESCH': 'ignore'
+  'ESC[@': 'ich1'
+  'ESC[4h': 'smir'
+  'ESC[4l': 'rmir'
 
   # There's no such sequence, however ls sends it
-  '\x1b[0m': 'noname'
-  '\x1b[1m': 'bold'
-  '\x1b[2m': 'dim'
-  '\x1b[4m': 'smul'
-  '\x1b[5m': 'blink'
-  '\x1b[7m': 'smso_rev'
-  '\x1b[10m': 'rmpch'
-  '\x1b[11m': 'smpch'
-  '\x1b[24m': 'rmul'
-  '\x1b[27m': 'rmso'
-  '\x1b[0;10m': 'sgr0'
-  '\x1b[39;49m': 'op'
-  '\x1b[A': 'kcuu1'
-  '\x1b[B': 'kcud1'
+  'ESC[0m': 'noname'
+  'ESC[1m': 'bold'
+  'ESC[2m': 'dim'
+  'ESC[4m': 'smul'
+  'ESC[5m': 'blink'
+  'ESC[7m': 'smso_rev'
+  'ESC[10m': 'rmpch'
+  'ESC[11m': 'smpch'
+  'ESC[24m': 'rmul'
+  'ESC[27m': 'rmso'
+  'ESC[0;10m': 'sgr0'
+  'ESC[39;49m': 'op'
+  'ESC[A': 'kcuu1'
+  'ESC[B': 'kcud1'
 
   # cuf1
-  '\x1b[C': 'kcuf1'
-  '\x1b[D': 'kcub1'
-  '\x1b[G': 'kb2'
-  '\x1b[H': 'home'
-  '\x1b[J': 'ed'
-  '\x1b[K': 'el'
-  '\x1b[1K': 'el1'
-  '\x1b[L': 'il1'
-  '\x1b[M': 'dl1'
-  '\x1b[P': 'dch1'
-  '\x1b]R': 'ignore'
+  'ESC[C': 'kcuf1'
+  'ESC[D': 'kcub1'
+  'ESC[G': 'kb2'
+  'ESC[H': 'home'
+  'ESC[J': 'ed'
+  'ESC[K': 'el'
+  'ESC[1K': 'el1'
+  'ESC[L': 'il1'
+  'ESC[M': 'dl1'
+  'ESC[P': 'dch1'
+  'ESC]R': 'ignore'
 
   # '\x1b[?25l': civis
 
 escape_sequences_re:
-  '\x1b[%dd': 'vpa'
-  '\x1b[%d;%dm': 'set_colour_pair'
-  '\x1b[%dm': 'set_colour'
-  '\x1b[%dC': 'cuf'
-  '\x1b[%dL': 'il'
-  '\x1b[%dM': 'dl'
-  '\x1b[%dP': 'dch'
-  '\x1b[%dX': 'ech'
-  '\x1b[%d;%dr': 'csr'
-  '\x1b[%d;%dH': 'cup'
+  'ESC[%dd': 'vpa'
+  'ESC[%d;%dm': 'set_colour_pair'
+  'ESC[%dm': 'set_colour'
+  'ESC[%dC': 'cuf'
+  'ESC[%dL': 'il'
+  'ESC[%dM': 'dl'
+  'ESC[%dP': 'dch'
+  'ESC[%dX': 'ech'
+  'ESC[%d;%dr': 'csr'
+  'ESC[%d;%dH': 'cup'
