Move OS X-related sequences to text file

--- a/linux_console.yml
+++ b/linux_console.yml
@@ -38,6 +38,17 @@ escape_sequences:
   'ESC[P': 'dch1'
   'ESC]R': 'ignore'
 
+  # esc sequences related to ITERM.
+  # for more deatails see:
+  #   - http://iterm2-tools.readthedocs.io/en/latest/shell_integration.html
+  #   - https://www.iterm2.com/documentation-shell-integration.html
+  'ESC]133;D;0': 'ignore'
+  'ESC]133;A': 'ignore'
+  'ESC]133;B': 'ignore'
+  'ESC]133;C': 'ignore'
+  'ESC]133;D;1': 'ignore'
+  'ESC]133;D;127': 'ignore'
+
   # '\x1b[?25l': civis
 
 escape_sequences_re:
