Use terminfo format for escape sequences

--- a/linux_console.yml
+++ b/linux_console.yml
@@ -19,68 +19,68 @@ control_characters:
   # '15': 'ignore'
 
 escape_sequences:
-  'ESC7': 'sc'
-  'ESC8': 'rc'
+  '\E7': 'sc'
+  '\E8': 'rc'
 
   # rs1 consists of \x1bc\x1b]R. The second part is ignored so far.
-  'ESCc': 'rs1'
+  '\Ec': 'rs1'
 
-  'ESCH': 'ignore'
-  'ESC[@': 'ich1'
-  'ESC[4h': 'smir'
-  'ESC[4l': 'rmir'
+  '\EH': 'ignore'
+  '\E[@': 'ich1'
+  '\E[4h': 'smir'
+  '\E[4l': 'rmir'
 
   # There's no such sequence, however ls sends it
-  'ESC[0m': 'noname'
+  '\E[0m': 'noname'
 
-  'ESC[1m': 'bold'
-  'ESC[2m': 'dim'
-  'ESC[4m': 'smul'
-  'ESC[5m': 'blink'
-  'ESC[7m': 'smso_rev'
-  'ESC[10m': 'rmpch'
-  'ESC[11m': 'smpch'
-  'ESC[24m': 'rmul'
-  'ESC[27m': 'rmso'
-  'ESC[0;10m': 'sgr0'
-  'ESC[39;49m': 'op'
-  'ESC[A': 'kcuu1'
-  'ESC[B': 'kcud1'
+  '\E[1m': 'bold'
+  '\E[2m': 'dim'
+  '\E[4m': 'smul'
+  '\E[5m': 'blink'
+  '\E[7m': 'smso_rev'
+  '\E[10m': 'rmpch'
+  '\E[11m': 'smpch'
+  '\E[24m': 'rmul'
+  '\E[27m': 'rmso'
+  '\E[0;10m': 'sgr0'
+  '\E[39;49m': 'op'
+  '\E[A': 'kcuu1'
+  '\E[B': 'kcud1'
 
   # cuf1
-  'ESC[C': 'kcuf1'
-  'ESC[D': 'kcub1'
-  'ESC[G': 'kb2'
-  'ESC[H': 'home'
-  'ESC[J': 'ed'
-  'ESC[K': 'el'
-  'ESC[1K': 'el1'
-  'ESC[L': 'il1'
-  'ESC[M': 'dl1'
-  'ESC[P': 'dch1'
-  'ESC]R': 'ignore'
+  '\E[C': 'kcuf1'
+  '\E[D': 'kcub1'
+  '\E[G': 'kb2'
+  '\E[H': 'home'
+  '\E[J': 'ed'
+  '\E[K': 'el'
+  '\E[1K': 'el1'
+  '\E[L': 'il1'
+  '\E[M': 'dl1'
+  '\E[P': 'dch1'
+  '\E]R': 'ignore'
 
   # esc sequences related to ITERM.
   # for more deatails see:
   #   - http://iterm2-tools.readthedocs.io/en/latest/shell_integration.html
   #   - https://www.iterm2.com/documentation-shell-integration.html
-  'ESC]133;D;0': 'ignore'
-  'ESC]133;A': 'ignore'
-  'ESC]133;B': 'ignore'
-  'ESC]133;C;': 'ignore'
-  'ESC]133;D;1': 'ignore'
-  'ESC]133;D;127': 'ignore'
+  '\E]133;D;0': 'ignore'
+  '\E]133;A': 'ignore'
+  '\E]133;B': 'ignore'
+  '\E]133;C;': 'ignore'
+  '\E]133;D;1': 'ignore'
+  '\E]133;D;127': 'ignore'
 
   # '\x1b[?25l': civis
 
 escape_sequences_re:
-  'ESC[%dd': 'vpa'
-  'ESC[%d;%dm': 'set_colour_pair'
-  'ESC[%dm': 'set_colour'
-  'ESC[%dC': 'cuf'
-  'ESC[%dL': 'il'
-  'ESC[%dM': 'dl'
-  'ESC[%dP': 'dch'
-  'ESC[%dX': 'ech'
-  'ESC[%d;%dr': 'csr'
-  'ESC[%d;%dH': 'cup'
+  '\E[%dd': 'vpa'
+  '\E[%d;%dm': 'set_colour_pair'
+  '\E[%dm': 'set_colour'
+  '\E[%dC': 'cuf'
+  '\E[%dL': 'il'
+  '\E[%dM': 'dl'
+  '\E[%dP': 'dch'
+  '\E[%dX': 'ech'
+  '\E[%d;%dr': 'csr'
+  '\E[%d;%dH': 'cup'
