Add missing esc sequence `\x1b[2G`
This allows to fix bug with backescape related to zsh (5.2, Mac OS X).

Bug with a backspace related to zsh happens in the following case:

- fill the line, move to the next line, fill some part of the next line
- press backspace several times
- try to press backspace when you are at the `home` position, you expect to
  move up to the previous line.
- before adding missing sequence, cursor didn't change the position
- try to press backspace one more time and you will delete the whole
  line.
Hope that this bug has dead after adding this sequence.

Rework `vpa` capability

* Make docstring similar to `hpa` capability.
* Replace low level `cols` with `bottom_most`.

--- a/linux_console.yml
+++ b/linux_console.yml
@@ -74,6 +74,7 @@ escape_sequences_re:
   '\E[%d;%dm': 'set_color_pair'
   '\E[%dm': 'set_color'
   '\E[%dC': 'cuf'
+  '\E[%dG': 'hpa'
   '\E[%dL': 'il'
   '\E[%dM': 'dl'
   '\E[%dP': 'dch'
