--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gits-client",
   "version": "1.0.0",
-  "description": "",
+  "description": "Gits is a web-based terminal emulator. Gits consists of two parts: a client and a server. Note that the package provides the client.",
   "main": "static/index.js",
   "scripts": {
     "start": "webpack --watch"
