--- a/gits/linux_console.yml
+++ b/gits/linux_console.yml
@@ -43,7 +43,7 @@ escape_sequences:
 
   # \E[7m is represented by both rev and smso
 
-  '\E[7m': 'smso'
+  '\E[7m': 'rev'
   '\E[10m': 'rmpch'
   '\E[11m': 'smpch'
   '\E[24m': 'rmul'
